@@ -21,7 +21,7 @@ set inc_dir         = $source_dir/include
 set lib_dir         = $source_dir/buildlib
 set libhelp_dir     = $source_dir/html/libhelp
 set htmlman_dir     = $source_dir/html/man
-set plughelp_dir    = $source_dir/html/plughelp
+set plughelp_dir    = $source_dir/html/3dmodHelp/plughelp
 set include_flags   = "-I. -I$inc_dir"
 set optimization    = "-O2"
 set gfx             = default
